--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+  background-color: #FA6775;
+  height: 130px;
+  padding: 20px 0 40px;
+  color: #FDD;
+  font-family: 'Itim', cursive;
 }
 
 .App-title {
@@ -25,4 +26,9 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+#box {
+  display: table;
+  margin: 20px auto;
 }
